# affinidi-labs-education-trust-network

./: .gitignore  CODEOWNERS  Makefile  NOTICE.txt  README.md
.github/workflows/: docker-publish.yml  main.yml
deployment/: .env.example
deployment/docker/: compose.edu-ministries.yml  compose.governance.yml  compose.trust-registries.yml  compose.universities.yml  compose.verifier.yml  docker-compose.localhost.yml  docker-compose.yml
deployment/scripts/: build-images.sh  cleanup.sh  dev-down.sh  dev-up.sh  setup_ngrok.sh  student-app.sh  verify_restructure.sh
design-language/: 01-design-philosophy.md  02-art-direction.md  03-design-tokens.yaml  04-ui-style-guide.md  05-components.md  06-accessibility.md  07-flutter-theme.md  08-quick-reference.md  README.md  version-history.md
docs/: QUICK_REFERENCE.md  README.md  architecture.md  development.md  didcomm-protocol.md  git-workflow.md  product-requirements.md  setup.md  troubleshooting.md  trust-registry.md
education-ministries-did-hosting/: Makefile  README.md  docker-compose.yml  setup.sh
education-ministries-did-hosting/code/: .dockerignore  .env.example  .gitignore  Dockerfile  pubspec.yaml
education-ministries-did-hosting/instance/: .env.example
governance-portal/: .flutter-plugins-dependencies  README.md  generate-user-configs.sh  setup.sh
governance-portal/code/: .env.example  (+9 more)
governance-portal/rust-did-generation-helper/: .gitignore  Cargo.toml  Dockerfile  README.md
student-vault-app/: README.md  setup.sh
trust-registry/: .dockerignore  .gitignore  Dockerfile.did-gen  Dockerfile.trust-registry  README.md  docker-compose.yml  generate-trust-registry-dids.sh  setup.sh
university-issuance-service/: Makefile  README.md  docker-compose.yml  setup.sh
verifier-portal/: README.md  docker-compose.yml  setup.sh
(+647 files in other folders)
