[package]
name = "trust-registry"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
description = "Trust Registry - DID Generation Helper"
license = "Apache-2.0"
publish = false

[dependencies]
# Core DID and key generation libraries
affinidi-tdk = "=0.2.7"
affinidi-did-key = { version = "0.1.4", optional = true }
did-peer = { version = "0.7.5", optional = true }

# Serialization
serde = "1.0.136"
serde_json = "1.0"

# Async runtime (required by affinidi-tdk)
tokio = { version = "1.47", features = ["full"] }

# Utilities
anyhow = "1.0.71"
dotenvy = "0.15.7"
sha256 = "1.6"

[[bin]]
name = "generate-secrets"
path = "bin/generate_secrets.rs"
required-features = ["dev-tools"]

[features]
default = []
dev-tools = ["did-peer", "affinidi-did-key"]

